--- a/todo.1
+++ b/todo.1
@@ -1,5 +1,96 @@
 4. Documentation
 
+Comments
+--------------
+
+TODO - show examples
+
+File inclusion
+-----------------
+
+TODO - include search path!
+
+TODO - include relative to home directory!
+
+TODO - include relative to a named home directory, `~bob/` for example.
+
+TODO -- Include of "dirctory/Pattern" or "direcoty" - all files in a directory - converted to -- verify this works -- { filename: data, filename2: data2 }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 {
 	Name: "Type"
