--- a/defect.1
+++ b/defect.1
@@ -1,6 +1,22 @@
+with """ {{ ... }} """ seem to need a "," at end of line
 
+{
+	debug_flags: [ "TabServer2/192.168.0.157:8088/db_SQL.*" ]
+	trace_flags: [ "*" ]
+	server_name: "Federated Auth Server"
+	RedisConnectHost: """{{ __env__ REDIS_HOST }}""" ,
+	RedisConnectAuth: """{{ __env__ REDIS_AUTH }}""" ,
+	PGConn: """user=pschlump password={{ __env__ DB_PASS }} sslmode=disable dbname=pschlump port=5432 host=192.168.0.139""" ,
+	DBType: "postgres"
+	DBName: "pschlump"
+	LoggingConfig: {
+		FileOn: "yes"
+		RedisOn: "yes"
+	}
+}
 
-
+Difference between gfJxonX and gfJsonX
+	ServerName       string                         `gfJxonX:"server_name" gfDefault:"Go-FTL Server"`  //
 
 
 0. Tabs inside "tags" fail - without error - 
