--- a/todo.1
+++ b/todo.1
@@ -1,5 +1,15 @@
 4. Documentation
 
+
+Alternative quoting rules for inside a string
+
+
+
+
+
+
+
+
 Comments
 --------------
 
@@ -994,3 +1004,5 @@ scan.go:1277
 test0017 -- in JxCli - if remove "," in hash get error - missing close } - some sort of scanner error
 	1. Find/Fix.
 	2. Add scanner tests specifically for this.
+
+TODO: a __file_name__/__FILE__ that has no quote marks for inside a string.
